Adds dodgy plot

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -26,7 +26,9 @@ summary(iris)
 You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
-plot(pressure)
+iris %>% 
+    ggplot(aes(x = petal, y = sepia)) +
+    geom_point()
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
