--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -15,8 +15,10 @@ This is an R Markdown document. Updating my file again. Markdown is a simple for
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+```{r iris}
+library(tidyverse)
+
+summary(iris)
 ```
 
 ## Including Plots
